add an option  for learning about the platform i.e how to create an art,

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -37,7 +37,7 @@
         "overview_buyer_1_desc": "ভারত জুড়ে প্রতিভাবান শিল্পীদের থেকে হাজার হাজার अद्वितीय, হস্তনির্মিত আইটেম ব্রাউজ করুন।",
         "overview_buyer_2_title": "শিল্পীদের সাথে সংযোগ স্থাপন করুন",
         "overview_buyer_2_desc": "শিল্পের পিছনের গল্পগুলি জানুন এবং সরাসরি নির্মাতাদের সাথে संवाद করুন।",
-        "overview_buyer_3_title": "নিরাপד ও সহজ কেনাকাটা",
+        "overview_buyer_3_title": "নিরাপদ ও সহজ কেনাকাটা",
         "overview_buyer_3_desc": "একাধিক অর্থপ্রদানের বিকল্পের সাথে একটি নির্বিঘ্ন এবং নিরাপদ কেনাকাটার অভিজ্ঞতা উপভোগ করুন।",
         "footer": "© {year} Artisan। সর্বস্বত্ব সংরক্ষিত।"
     },
@@ -90,6 +90,7 @@
         "menu_marketing": "ביপণন হাব",
         "menu_community": "কমিউনিটি হাব",
         "menu_support": "সমর্থন",
+        "menu_academy": "কারিগর একাডেমি",
         "menu_live_studio": "লাইভ স্টুডিও",
         "menu_requests": "অনুসরণ অনুরোধ",
         "menu_cart": "শপিং কার্ট",
@@ -231,7 +232,11 @@
         "shipping": "শিপিং",
         "total": "মোট",
         "checkout_button": "চেকআউটে এগিয়ে যান"
+    },
+    "academy_page": {
+        "title": "কারিগর একাডেমি",
+        "description": "আমাদের বিশেষজ্ঞ-নেতৃত্বাধীন টিউটোরিয়ালগুলির সাথে আপনার দক্ষতা তীক্ষ্ণ করুন এবং আপনার ব্যবসা বাড়ান।",
+        "card_title": "ভিডিও লাইব্রেরি",
+        "card_description": "আপনাকে সফল হতে সাহায্য করার জন্য ডিজাইন করা আমাদের টিউটোরিয়ালের সংগ্রহ অন্বেষণ করুন।"
     }
 }
-
-    
