--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -90,6 +90,7 @@
         "menu_marketing": "मार्केटिंग हब",
         "menu_community": "कम्युनिटी हब",
         "menu_support": "समर्थन",
+        "menu_academy": "कारीगर अकादमी",
         "menu_live_studio": "लाइव स्टूडियो",
         "menu_requests": "फॉलो अनुरोध",
         "menu_cart": "शॉपिंग कार्ट",
@@ -118,7 +119,7 @@
     },
     "payment_settings_page": {
         "title": "भुगतान सेटिंग्स",
-        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त کرتے ہیں, اسے कॉन्फ़िगर करें।",
+        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त करते हैं, इसे कॉन्फ़िगर करें।",
         "card_title": "भुगतान विधि",
         "card_description": "धनराशि प्राप्त करने के लिए अपनी पसंदीदा विधि चुनें। आपकी जानकारी एन्क्रिप्टेड और सुरक्षित रूप से संग्रहीत है।",
         "upi_label": "UPI आईडी (VPA)",
@@ -231,7 +232,11 @@
         "shipping": "शिपिंग",
         "total": "कुल",
         "checkout_button": "चेकआउट के लिए आगे बढ़ें"
+    },
+    "academy_page": {
+        "title": "कारीगर अकादमी",
+        "description": "हमारे विशेषज्ञ के नेतृत्व वाले ट्यूटोरियल के साथ अपने कौशल को तेज करें और अपने व्यवसाय को बढ़ाएं।",
+        "card_title": "वीडियो लाइब्रेरी",
+        "card_description": "आपको सफल होने में मदद करने के लिए डिज़ाइन किए गए हमारे ट्यूटोरियल के संग्रह का अन्वेषण करें।"
     }
 }
-
-    
