--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -90,6 +90,7 @@
         "menu_marketing": "विपणन केंद्र",
         "menu_community": "कम्युनिटी हब",
         "menu_support": "समर्थन",
+        "menu_academy": "कलाकार अकादमी",
         "menu_live_studio": "लाइव्ह स्टुडिओ",
         "menu_requests": "फॉलो विनंत्या",
         "menu_cart": "शॉपिंग कार्ट",
@@ -231,7 +232,11 @@
         "shipping": "शिपिंग",
         "total": "एकूण",
         "checkout_button": "चेकआउट करण्यासाठी पुढे जा"
+    },
+    "academy_page": {
+        "title": "कलाकार अकादमी",
+        "description": "आमच्या तज्ञ-নেতৃত্বাধীন ट्यूटोरियलसह तुमची कौशल्ये तीव्र करा आणि तुमचा व्यवसाय वाढवा.",
+        "card_title": "व्हिडिओ लायब्ररी",
+        "card_description": "तुम्हाला यशस्वी होण्यास मदत करण्यासाठी डिझाइन केलेल्या आमच्या ट्यूटोरियलचा संग्रह एक्सप्लोर करा."
     }
 }
-
-    
