--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -90,6 +90,7 @@
         "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_community": "சமூக மையம்",
         "menu_support": "ஆதரவு",
+        "menu_academy": "கைவினைஞர் அகாடமி",
         "menu_live_studio": "நேரடி ஸ்டுடியோ",
         "menu_requests": "பின்தொடர்தல் கோரிக்கைகள்",
         "menu_cart": "ஷாப்பிங் கார்ட்",
@@ -231,7 +232,11 @@
         "shipping": "ஷிப்பிங்",
         "total": "மொத்தம்",
         "checkout_button": "செக் அவுட்டிற்குச் செல்லவும்"
+    },
+    "academy_page": {
+        "title": "கைவினைஞர் அகாடமி",
+        "description": "எங்கள் நிபுணர் தலைமையிலான பயிற்சிகள் மூலம் உங்கள் திறமைகளை கூர்மைப்படுத்தி, உங்கள் வணிகத்தை வளர்க்கவும்.",
+        "card_title": "வீடியோ நூலகம்",
+        "card_description": "நீங்கள் வெற்றிபெற உதவும் வகையில் வடிவமைக்கப்பட்ட எங்கள் பயிற்சிகளின் தொகுப்பை ஆராயுங்கள்."
     }
 }
-
-    
