--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -90,6 +90,7 @@
         "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_community": "కమ్యూనిటీ హబ్",
         "menu_support": "మద్దతు",
+        "menu_academy": "కళాకారుల అకాడమీ",
         "menu_live_studio": "లైవ్ స్టూడియో",
         "menu_requests": "ఫాలో అభ్యర్థనలు",
         "menu_cart": "షాపింగ్ కార్ట్",
@@ -231,7 +232,11 @@
         "shipping": "షిప్పింగ్",
         "total": "మొత్తం",
         "checkout_button": "చెక్అవుట్‌కు కొనసాగండి"
+    },
+    "academy_page": {
+        "title": "కళాకారుల అకాడమీ",
+        "description": "మా నిపుణుల నేతృత్వంలోని ట్యుటోరియల్స్‌తో మీ నైపుణ్యాలను పదును పెట్టండి మరియు మీ వ్యాపారాన్ని పెంచుకోండి.",
+        "card_title": "వీడియో లైబ్రరీ",
+        "card_description": "మీరు విజయవంతం కావడానికి సహాయపడటానికి రూపొందించిన మా ట్యుటోరియల్స్ సేకరణను అన్వేషించండి."
     }
 }
-
-    
