--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -90,6 +90,7 @@
         "menu_marketing": "مارکیٹنگ ہب",
         "menu_community": "کمیونٹی ہب",
         "menu_support": "سپورٹ",
+        "menu_academy": "کاریگر اکیڈمی",
         "menu_live_studio": "لائیو اسٹوڈیو",
         "menu_requests": "فالو کی درخواستیں",
         "menu_cart": "شاپنگ کارٹ",
@@ -101,7 +102,7 @@
     },
     "verification_page": {
         "title": "اکاؤنٹ کی تصدیق",
-        "description": "اپنی مصنوعات فروخت करने اور ادائیگیاں وصول کرنے کے لیے، براہ کرم اپنی شناخت کی تصدیق کریں۔",
+        "description": "اپنی مصنوعات فروخت کرنے اور ادائیگیاں وصول کرنے کے لیے، براہ کرم اپنی شناخت کی تصدیق کریں۔",
         "aadhaar_title": "آدھار کی تصدیق",
         "aadhaar_description": "اپنی شناخت کی تصدیق کے لیے، براہ کرم اپنی آدھار کی تفصیلات فراہم کریں۔",
         "aadhaar_label": "آدھار نمبر",
@@ -120,7 +121,7 @@
         "title": "ادائیگی کی ترتیبات",
         "description": "آپ اپنی فروخت کے لیے ادائیگیاں کیسے وصول کرتے ہیں اسے ترتیب دیں۔",
         "card_title": "ادائیگی کا طریقہ",
-        "card_description": "فنڈز وصول करने के لیے اپنا پسندیدہ طریقہ منتخب کریں۔ آپ کی معلومات خفیہ اور محفوظ طریقے سے ذخیرہ کی جاتی ہیں۔",
+        "card_description": "فنڈز وصول کرنے کے لیے اپنا پسندیدہ طریقہ منتخب کریں۔ آپ کی معلومات خفیہ اور محفوظ طریقے سے ذخیرہ کی جاتی ہیں۔",
         "upi_label": "UPI ID (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "بینک اکاؤنٹ",
@@ -159,9 +160,9 @@
         "video_preview_title": "لائیو اسٹوڈیو",
         "video_preview_description": "لائیو اسٹریم کے لیے آپ کا کیمرہ فیڈ۔ آپ یہاں جو کچھ دیکھتے ہیں وہی آپ کے سامعین دیکھیں گے۔",
         "camera_access_denied": "کیمرہ تک رسائی سے انکار کر دیا گیا",
-        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے के لیے براہ کرم अपने براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
+        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے کے لیے براہ کرم अपने براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
         "camera_access_required": "کیمرہ تک رسائی درکار ہے",
-        "allow_camera_access_prompt": "لائیو اسٹوڈیو استعمال करने کے لیے براہ کرم اپنے براؤزر میں کیمرہ تک رسائی کی اجازت دیں۔",
+        "allow_camera_access_prompt": "لائیو اسٹوڈیو استعمال کرنے کے لیے براہ کرم اپنے براؤزر میں کیمرہ تک رسائی کی اجازت دیں۔",
         "stream_controls_title": "اسٹریم کنٹرولز",
         "stream_controls_description": "یہاں سے اپنے لائیو سیشن کا نظم کریں۔",
         "stream_title_label": "اسٹریم کا عنوان",
@@ -199,31 +200,31 @@
             "description": "عام سوالات کے فوری جوابات تلاش کریں۔",
             "items": [
                 {
-                    "question": "کیا آرٹیسن پلیٹ فارم استعمال करने کے لیے مفت ہے؟",
-                    "answer": "ہاں، پلیٹ فارم کاریگروں के لیے مکمل طور پر مفت ہے۔ ہم آپ کی فروخت پر کوئی کمیشن یا فیس وصول نہیں کرتے ہیں۔"
+                    "question": "کیا آرٹیسن پلیٹ فارم استعمال کرنے کے لیے مفت ہے؟",
+                    "answer": "ہاں، پلیٹ فارم کاریگروں کے لیے مکمل طور پر مفت ہے۔ ہم آپ کی فروخت پر کوئی کمیشن یا فیس وصول نہیں کرتے ہیں۔"
                 },
                 {
-                    "question": "مجھے اپنی فروخت के لیے ادائیگی کیسے ملے گی؟",
-                    "answer": "آپ اپنے ڈیش بورڈ के 'ادائیگی کی ترتیبات' سیکشن میں अपनी ادائیگی کی ترجیحات ترتیب دے سکتے ہیں۔ ہم UPI اور براہ راست بینک ٹرانسفر کے ذریعے ادائیگیوں کی حمایت کرتے ہیں۔"
+                    "question": "مجھے اپنی فروخت کے لیے ادائیگی کیسے ملے گی؟",
+                    "answer": "آپ اپنے ڈیش بورڈ کے 'ادائیگی کی ترتیبات' سیکشن میں अपनी ادائیگی کی ترجیحات ترتیب دے سکتے ہیں۔ ہم UPI اور براہ راست بینک ٹرانسفر کے ذریعے ادائیگیوں کی حمایت کرتے ہیں۔"
                 },
                 {
                     "question": "AI ٹولز کیسے کام کرتے ہیں؟",
-                    "answer": "ہمارے AI ٹولز سادہ ہونے کے لیے बनाए گئے ہیں۔ مثال کے طور پر، ایک تفصیل پیدا کرنے کے لیے، صرف ایک پروڈکٹ کی تصویر اپ لوڈ کریں اور 'پیدا کریں' پر کلک کریں۔ AI تصویر کا تجزیہ کرتا ہے اور آپ کے لیے ایک تفصیل اور ٹیگز بناتا ہے۔ اس کے بعد آپ اپنی مرضی کے مطابق متن میں ترمیم کر सकते ہیں۔"
+                    "answer": "ہمارے AI ٹولز سادہ ہونے کے لیے बनाए گئے ہیں۔ مثال کے طور پر، ایک تفصیل پیدا کرنے کے لیے، صرف ایک پروڈکٹ کی تصویر اپ لوڈ کریں اور 'پیدا کریں' پر کلک کریں۔ AI تصویر کا تجزیہ کرتا ہے اور آپ کے لیے ایک تفصیل اور ٹیگز بناتا ہے۔ اس کے بعد آپ اپنی مرضی کے مطابق متن میں ترمیم کر سکتے ہیں۔"
                 },
                 {
                     "question": "کیا میں دوسرے فنکاروں کے ساتھ بات چیت کر سکتا ہوں؟",
-                    "answer": "ہاں! 'کمیونٹی ہب' آپ کے لیے پلیٹ فارم پر دوسرے کاریگروں سے جڑنے، خیالات کا اشتراک करने اور تعاون करने کی جگہ ہے۔"
+                    "answer": "ہاں! 'کمیونٹی ہب' آپ کے لیے پلیٹ فارم پر دوسرے کاریگروں سے جڑنے، خیالات کا اشتراک کرنے اور تعاون کرنے کی جگہ ہے۔"
                 },
                 {
-                    "question": "لائیو جانے के لیے مجھے اپنا اکاؤنٹ کیوں تصدیق करना ہوگا؟",
-                    "answer": "فنکاروں اور سیکھنے والوں سمیت تمام صارفین के لیے ایک محفوظ اور قابل اعتماد ماحول کو یقینی بنانے کے لیے ہمیں لائیو اسٹریمنگ کے لیے تصدیق کی ضرورت ہے۔ یہ غلط استعمال کو روکنے اور پلیٹ فارم کی سالمیت کو برقرار रखने में مدد کرتا ہے۔"
+                    "question": "لائیو جانے کے لیے مجھے اپنا اکاؤنٹ کیوں تصدیق کرنا ہوگا؟",
+                    "answer": "فنکاروں اور سیکھنے والوں سمیت تمام صارفین کے لیے ایک محفوظ اور قابل اعتماد ماحول کو یقینی بنانے کے لیے ہمیں لائیو اسٹریمنگ کے لیے تصدیق کی ضرورت ہے۔ یہ غلط استعمال کو روکنے اور پلیٹ فارم کی سالمیت کو برقرار रखने में مدد کرتا ہے۔"
                 }
             ]
         }
     },
     "suggestions_page": {
         "title": "تجاویز کا خانہ",
-        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں हमारी मदद के لیے اپنے خیالات کا اشتراک کریں۔",
+        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں हमारी मदद کے لیے اپنے خیالات کا اشتراک کریں۔",
         "card_title": "اپنی رائے جمع کروائیں",
         "card_description": "ہم آپ کے ان پٹ کی قدر करते ہیں۔ آپ کے ذہن میں کیا ہے؟",
         "placeholder": "مثال کے طور پر، 'کاش فنکاروں کے پورٹ فولیو بنانے کا کوئی طریقہ ہوتا...'",
@@ -244,12 +245,16 @@
         "empty_title": "آپ کی کارٹ خالی ہے",
         "empty_description": "ایسا لگتا ہے کہ آپ نے ابھی تک कोई آئٹم شامل نہیں کیا ہے۔ اپنی پسند کی کوئی چیز تلاش کرنے के لیے دریافت کرنا شروع کریں!",
         "summary_title": "آرڈر کا خلاصہ",
-        "summary_description": "چیک آؤٹ करने سے پہلے اپنے آرڈر کا جائزہ لیں۔",
+        "summary_description": "چیک آؤٹ کرنے سے پہلے اپنے آرڈر کا جائزہ لیں۔",
         "subtotal": "ذیلی کل",
         "shipping": "شپنگ",
         "total": "کل",
         "checkout_button": "چیک آؤٹ پر آگے بڑھیں"
+    },
+    "academy_page": {
+        "title": "کاریگر اکیڈمی",
+        "description": "ہمارے ماہر کی قیادت میں ٹیوٹوریلز کے ساتھ اپنی صلاحیتوں کو تیز کریں اور اپنے کاروبار کو بڑھائیں۔",
+        "card_title": "ویڈیو لائبریری",
+        "card_description": "کامیاب ہونے میں آپ کی مدد کے لیے بنائے گئے ہمارے ٹیوٹوریلز کا مجموعہ دریافت کریں۔"
     }
 }
-
-    
