remove buyer option in the login page and singup page

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "যখন একজন গ্রাহک আপনার শিল্প ক্রয় করেন, তখন তারা UPI দিয়ে সহজেই অর্থ প্রদান করতে পারেন। আপনি তাৎক্ষণিকভাবে অর্থ পান। সরল, দ্রুত এবং ন্যায্য।",
         "payments_feature_2_title": "प्रत्यक्ष ও شفاف",
         "payments_feature_2_desc": "কোনো লুকানো চার্জ নেই। কোনো বিলম্ব নেই। আপনার কঠোর পরিশ্রমের অর্থ সরাসরি আপনার কাছে পৌঁছায়, যা আপনাকে আপনার ব্যবসা বাড়াতে सशक्त করে।",
-        "overview_buyer_title": "ক্রেতাদের জন্য: अद्वितीय भारतीय শিল্প আবিষ্কার করুন",
-        "overview_buyer_subtitle": "খাঁটি হস্তশিল্পের একটি क्यूरेटेड মার্কেটপ্লেস অন্বেষণ করুন এবং সরাসরি শিল্পীদের সাথে সংযোগ স্থাপন করুন।",
-        "overview_buyer_1_title": "খাঁটি হস্তশিল্প আবিষ্কার করুন",
-        "overview_buyer_1_desc": "ভারত জুড়ে প্রতিভাবান শিল্পীদের থেকে হাজার হাজার अद्वितीय, হস্তনির্মিত আইটেম ব্রাউজ করুন।",
-        "overview_buyer_2_title": "শিল্পীদের সাথে সংযোগ স্থাপন করুন",
-        "overview_buyer_2_desc": "শিল্পের পিছনের গল্পগুলি জানুন এবং সরাসরি নির্মাতাদের সাথে संवाद করুন।",
-        "overview_buyer_3_title": "নিরাপদ ও সহজ কেনাকাটা",
-        "overview_buyer_3_desc": "একাধিক অর্থপ্রদানের বিকল্পের সাথে একটি নির্বিঘ্ন এবং নিরাপদ কেনাকাটার অভিজ্ঞতা উপভোগ করুন।",
         "footer": "© {year} Artisan। সর্বস্বত্ব সংরক্ষিত।"
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "পাসওয়ার্ড",
         "forgot_password": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
-        "login_seller_button": "বিক্রেতা হিসাবে লগইন করুন",
-        "login_buyer_button": "ক্রেতা হিসাবে লগইন করুন",
+        "login_seller_button": "কারিগর হিসেবে লগইন করুন",
         "signup_link": "একটি অ্যাকাউন্ট নেই? সাইন আপ করুন"
     },
     "signup_page": {
-        "title": "একটি অ্যাকাউন্ট তৈরি করুন",
-        "description": "অনন্য কারুশিল্প বিক্রি বা কেনা শুরু করতে Artisan-এ যোগ দিন।",
+        "title": "একটি কারিগর অ্যাকাউন্ট তৈরি করুন",
+        "description": "আপনার সৃজনশীল যাত্রা শুরু করতে Artisan-এ যোগ দিন।",
         "avatar_label": "একটি প্রোফাইল ছবি আপলোড করুন",
         "username_label": "ব্যবহারকারীর নাম",
         "username_placeholder": "যেমন, PriyaKumar",
@@ -78,22 +69,18 @@
         "confirm_password_label": "পাসওয়ার্ড নিশ্চিত করুন",
         "create_account_button": "অ্যাকাউন্ট তৈরি করুন",
         "login_link": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে? লগইন করুন",
-        "legal_disclaimer": "একটি অ্যাকাউন্ট তৈরি করে, আপনি আমাদের শর্তাবলীতে সম্মত হন। অবৈধ কার্যকলাপ আইনি পদক্ষেপের কারণ হতে পারে।",
-        "role_label": "আপনার ভূমিকা চয়ন করুন",
-        "role_seller": "বিক্রেता",
-        "role_buyer": "ক্রেতা"
+        "legal_disclaimer": "একটি অ্যাকাউন্ট তৈরি করে, আপনি আমাদের শর্তাবলীতে সম্মত হন। অবৈধ কার্যকলাপ আইনি পদক্ষেপের কারণ হতে পারে।"
     },
     "dashboard_layout": {
         "menu_dashboard": "ড্যাশবোর্ড",
-        "menu_add_product": "পণ্য যোগ করুন",
+        "menu_add_product": "শোকেস তৈরি করুন",
         "menu_analytics": "বিশ্লেষণ",
-        "menu_marketing": "ביপণন হাব",
+        "menu_marketing": "বিপণন হাব",
         "menu_community": "কমিউনিটি হাব",
         "menu_support": "সমর্থন",
         "menu_academy": "কারিগর একাডেমি",
         "menu_live_studio": "লাইভ স্টুডিও",
         "menu_requests": "অনুসরণ অনুরোধ",
-        "menu_cart": "শপিং কার্ট",
         "account_menu_label": "আমার অ্যাকাউন্ট",
         "account_menu_verify": "অ্যাকাউন্ট যাচাই করুন",
         "account_menu_profile": "প্রোফাইল",
