--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "जब कोई ग्राहक आपकी कला खरीदता है, तो वे UPI से आसानी से भुगतान कर सकते हैं। आपको भुगतान तुरंत मिल जाता है। सरल, तेज और निष्पक्ष।",
         "payments_feature_2_title": "प्रत्यक्ष और पारदर्शी",
         "payments_feature_2_desc": "कोई छिपा हुआ शुल्क नहीं। कोई देरी नहीं। आपकी मेहनत की कमाई सीधे आप तक पहुँचती है, जो आपको अपना व्यवसाय बढ़ाने के लिए सशक्त बनाती है।",
-        "overview_buyer_title": "खरीदारों के लिए: अद्वितीय भारतीय कला की खोज करें",
-        "overview_buyer_subtitle": "प्रामाणिक शिल्पों के एक क्यूरेटेड मार्केटप्लेस का अन्वेषण करें और सीधे कलाकारों से जुड़ें।",
-        "overview_buyer_1_title": "प्रामाणिक शिल्प खोजें",
-        "overview_buyer_1_desc": "पूरे भारत के प्रतिभाशाली कलाकारों से हजारों अद्वितीय, हस्तनिर्मित वस्तुओं को ब्राउज़ करें।",
-        "overview_buyer_2_title": "कलाकारों से जुड़ें",
-        "overview_buyer_2_desc": "कला के पीछे की कहानियों को जानें और सीधे रचनाकारों के साथ संवाद करें।",
-        "overview_buyer_3_title": "सुरक्षित और आसान खरीदारी",
-        "overview_buyer_3_desc": "कई भुगतान विकल्पों के साथ एक सहज और सुरक्षित खरीदारी अनुभव का आनंद लें।",
         "footer": "© {year} आर्टिसन। सर्वाधिकार सुरक्षित।"
     },
      "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "कारीगर_प्रिया / m@example.com / 9876543210",
         "password_label": "पासवर्ड",
         "forgot_password": "अपना पासवर्ड भूल गए?",
-        "login_seller_button": "विक्रेता के रूप में लॉग इन करें",
-        "login_buyer_button": "खरीदार के रूप में लॉग इन करें",
+        "login_seller_button": "कारीगर के रूप में लॉग इन करें",
         "signup_link": "खाता नहीं है? साइन अप करें"
     },
     "signup_page": {
-        "title": "खाता बनाएं",
-        "description": "अद्वितीय शिल्प बेचना या खरीदना शुरू करने के लिए आर्टिसन से जुड़ें।",
+        "title": "एक कारीगर खाता बनाएँ",
+        "description": "अपनी रचनात्मक यात्रा शुरू करने के लिए आर्टिसन से जुड़ें।",
         "avatar_label": "एक प्रोफ़ाइल चित्र अपलोड करें",
         "username_label": "उपयोगकर्ता नाम",
         "username_placeholder": "उदा., PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "पासवर्ड की पुष्टि करें",
         "create_account_button": "खाता बनाएं",
         "login_link": "पहले से ही एक खाता है? लॉग इन करें",
-        "legal_disclaimer": "खाता बनाकर, आप हमारी शर्तों से सहमत होते हैं। अवैध गतिविधि पर कानूनी कार्रवाई हो सकती है।",
-        "role_label": "अपनी भूमिका चुनें",
-        "role_seller": "विक्रेता",
-        "role_buyer": "खरीदार"
+        "legal_disclaimer": "खाता बनाकर, आप हमारी शर्तों से सहमत होते हैं। अवैध गतिविधि पर कानूनी कार्रवाई हो सकती है।"
     },
     "dashboard_layout": {
         "menu_dashboard": "डैशबोर्ड",
-        "menu_add_product": "उत्पाद जोड़ें",
+        "menu_add_product": "शोकेस बनाएँ",
         "menu_analytics": "एनालिटिक्स",
         "menu_marketing": "मार्केटिंग हब",
         "menu_community": "कम्युनिटी हब",
@@ -93,7 +81,6 @@
         "menu_academy": "कारीगर अकादमी",
         "menu_live_studio": "लाइव स्टूडियो",
         "menu_requests": "फॉलो अनुरोध",
-        "menu_cart": "शॉपिंग कार्ट",
         "account_menu_label": "मेरा खाता",
         "account_menu_verify": "खाता सत्यापित करें",
         "account_menu_profile": "प्रोफ़ाइल",
