--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "ஒரு வாடிக்கையாளர் உங்கள் கலையை வாங்கும்போது, அவர்கள் UPI மூலம் எளிதாக பணம் செலுத்தலாம். நீங்கள் உடனடியாக பணம் பெறுவீர்கள். எளிய, வேகமான మరియు ന്യായമായ.",
         "payments_feature_2_title": "நேரடி & வெளிப்படையான",
         "payments_feature_2_desc": "மறைக்கப்பட்ட கட்டணங்கள் இல்லை. தாமதங்கள் இல்லை. உங்கள் கடினமாக சம்பாதித்த பணம் நேரடியாக உங்களைச் சென்றடைகிறது, இது உங்கள் வணிகத்தை வளர்க்க உங்களுக்கு அதிகாரம் அளிக்கிறது.",
-        "overview_buyer_title": "வாங்குபவர்களுக்கு: தனித்துவமான இந்தியக் கலையைக் கண்டறியுங்கள்",
-        "overview_buyer_subtitle": "உண்மையான கைவினைப்பொருட்களின் க्युरेट செய்யப்பட మార్కెట్ ప్లేస్ ను అన్వేషించండి మరియు నేరుగా కళాకారులతో కనెక్ట్ అవ్వండి.",
-        "overview_buyer_1_title": "உண்மையான கைவினைப்பொருட்களைக் கண்டறியுங்கள்",
-        "overview_buyer_1_desc": "இந்தியா முழுவதும் உள்ள திறமையான கலைஞர்களிடமிருந்து ஆயிரக்கணக்கான தனித்துவமான, கையால் செய்யப்பட்ட பொருட்களை உலாவவும்.",
-        "overview_buyer_2_title": "கலைஞர்களுடன் இணையுங்கள்",
-        "overview_buyer_2_desc": "கலையின் பின்னணியில் உள்ள கதைகளைக் கற்றுக் கொண்டு, படைப்பாளர்களுடன் நேரடியாகத் தொடர்பு கொள்ளுங்கள்.",
-        "overview_buyer_3_title": "பாதுகாப்பான & எளிதான ஷாப்பிங்",
-        "overview_buyer_3_desc": "பல கட்டண விருப்பங்களுடன் தடையற்ற மற்றும் பாதுகாப்பான ஷாப்பிங் அனுபவத்தை அனுபவிக்கவும்.",
         "footer": "© {year} Artisan. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை."
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "கடவுச்சொல்",
         "forgot_password": "உங்கள் கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
-        "login_seller_button": "விற்பனையாளராக உள்நுழைக",
-        "login_buyer_button": "வாங்குபவராக உள்நுழைக",
+        "login_seller_button": "கைவினைஞராக உள்நுழைக",
         "signup_link": "கணக்கு இல்லையா? பதிவுபெறு"
     },
     "signup_page": {
-        "title": "ஒரு கணக்கை உருவாக்கவும்",
-        "description": "தனித்துவமான கைவினைப்பொருட்களை விற்க அல்லது வாங்க Artisan இல் சேரவும்.",
+        "title": "ஒரு கைவினைஞர் கணக்கை உருவாக்கவும்",
+        "description": "உங்கள் படைப்பு பயணத்தைத் தொடங்க Artisan இல் சேரவும்.",
         "avatar_label": "சுயவிவரப் படத்தைப் பதிவேற்றவும்",
         "username_label": "பயனர்பெயர்",
         "username_placeholder": "எ.கா., PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
         "create_account_button": "கணக்கை உருவாக்கவும்",
         "login_link": "ஏற்கனவே கணக்கு உள்ளதா? உள்நுழைக",
-        "legal_disclaimer": "கணக்கை உருவாக்குவதன் மூலம், எங்கள் விதிமுறைகளை ஏற்கிறீர்கள். சட்டவிரோத செயல்பாடு சட்ட நடவடிக்கைக்கு வழிவகுக்கும்.",
-        "role_label": "உங்கள் பாத்திரத்தைத் தேர்வுசெய்க",
-        "role_seller": "விற்பனையாளர்",
-        "role_buyer": "வாங்குபவர்"
+        "legal_disclaimer": "கணக்கை உருவாக்குவதன் மூலம், எங்கள் விதிமுறைகளை ஏற்கிறீர்கள். சட்டவிரோத செயல்பாடு சட்ட நடவடிக்கைக்கு வழிவகுக்கும்."
     },
     "dashboard_layout": {
         "menu_dashboard": "டாஷ்போர்டு",
-        "menu_add_product": "தயாரிப்பைச் சேர்",
+        "menu_add_product": "காட்சி பெட்டியை உருவாக்கவும்",
         "menu_analytics": "பகுப்பாய்வு",
         "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_community": "சமூக மையம்",
@@ -93,7 +81,6 @@
         "menu_academy": "கைவினைஞர் அகாடமி",
         "menu_live_studio": "நேரடி ஸ்டுடியோ",
         "menu_requests": "பின்தொடர்தல் கோரிக்கைகள்",
-        "menu_cart": "ஷாப்பிங் கார்ட்",
         "account_menu_label": "என் கணக்கு",
         "account_menu_verify": "கணக்கைச் சரிபார்க்கவும்",
         "account_menu_profile": "சுயவிவரம்",
@@ -160,7 +147,7 @@
         "video_preview_title": "நேரடி ஸ்டுடியோ",
         "video_preview_description": "நேரடி ஒளிபரப்பிற்கான உங்கள் கேமரா ஊட்டம். நீங்கள் இங்கே பார்ப்பதை உங்கள் பார்வையாளர்கள் பார்ப்பார்கள்.",
         "camera_access_denied": "கேமரா அணுகல் மறுக்கப்பட்டது",
-        "enable_camera_prompt": "இந்த அம்சத்தைப் பயன்படுத்த உங்கள் உலாவி அமைப்புகளில் கேமரா அனுமதிகளை இயக்கவும்.",
+        "enable_camera_prompt": "இந்த அம்சத்தைப் பயன்படுத்த உங்கள் உலாவி அமைப்புகளில் கேமरा அனுமதிகளை இயக்கவும்.",
         "camera_access_required": "கேமரா அணுகல் தேவை",
         "allow_camera_access_prompt": "நேரடி ஸ்டுடியோவைப் பயன்படுத்த உங்கள் உலாவியில் கேமரா அணுகலை அனுமதிக்கவும்.",
         "stream_controls_title": "ஓடை கட்டுப்பாடுகள்",
