--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "ఒక కస్టమర్ మీ కళను కొనుగోలు చేసినప్పుడు, వారు UPIతో సులభంగా చెల్లించవచ్చు. మీరు తక్షణమే చెల్లింపును పొందుతారు. సరళమైన, వేగవంతమైన మరియు న్యాయమైనది.",
         "payments_feature_2_title": "ప్రత్యక్ష & పారదర్శక",
         "payments_feature_2_desc": "దాచిన ఛార్జీలు లేవు. ఆలస్యం లేదు. మీ కష్టపడి సంపాదించిన డబ్బు నేరుగా మీకు చేరుతుంది, ఇది మీ వ్యాపారాన్ని పెంచుకోవడానికి మిమ్మల్ని శక్తివంతం చేస్తుంది.",
-        "overview_buyer_title": "కొనుగోలుదారుల కోసం: ప్రత్యేకమైన భారతీయ కళను కనుగొనండి",
-        "overview_buyer_subtitle": "ప్రామాణికమైన చేతిపనుల యొక్క క్యూరేటెడ్ మార్కెట్‌ప్లేస్‌ను అన్వేషించండి మరియు నేరుగా కళాకారులతో కనెక్ట్ అవ్వండి.",
-        "overview_buyer_1_title": "ప్రామాణికమైన చేతిపనులను కనుగొనండి",
-        "overview_buyer_1_desc": "భారతదేశం అంతటా ప్రతిభావంతులైన కళాకారుల నుండి వేలాది ప్రత్యేకమైన, చేతితో తయారు చేసిన వస్తువులను బ్రౌజ్ చేయండి.",
-        "overview_buyer_2_title": "కళాకారులతో కనెక్ట్ అవ్వండి",
-        "overview_buyer_2_desc": "కళ వెనుక ఉన్న కథలను తెలుసుకోండి మరియు నేరుగా సృష్టికర్తలతో కమ్యూనికేట్ చేయండి.",
-        "overview_buyer_3_title": "సురక్షిత & సులభమైన షాపింగ్",
-        "overview_buyer_3_desc": "బహుళ చెల్లింపు ఎంపికలతో అతుకులు లేని మరియు సురక్షితమైన షாపింగ్ అనుభవాన్ని ఆస్వాదించండి.",
         "footer": "© {year} ఆర్టిసాన్. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి."
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "పాస్‌వర్డ్",
         "forgot_password": "మీ పాస్‌వర్డ్‌ను మర్చిపోయారా?",
-        "login_seller_button": "విక్రేతగా లాగిన్ చేయండి",
-        "login_buyer_button": "కొనుగోలుదారుగా లాగిన్ చేయండి",
+        "login_seller_button": "కళాకారుడిగా లాగిన్ చేయండి",
         "signup_link": "ఖాతా లేదా? సైన్ అప్ చేయండి"
     },
     "signup_page": {
-        "title": "ఖాతాను సృష్టించండి",
-        "description": "ప్రత్యేకమైన చేతిపనులను విక్రయించడం లేదా కొనడం ప్రారంభించడానికి ఆర్టిసాన్‌లో చేరండి.",
+        "title": "ఒక కళాకారుడి ఖాతాను సృష్టించండి",
+        "description": "మీ సృజనాత్మక ప్రయాణాన్ని ప్రారంభించడానికి ఆర్టిసాన్‌లో చేరండి.",
         "avatar_label": "ఒక ప్రొఫైల్ చిత్రాన్ని అప్‌లోడ్ చేయండి",
         "username_label": "వినియోగదారు పేరు",
         "username_placeholder": "ఉదా., PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
         "create_account_button": "ఖాతాను సృష్టించండి",
         "login_link": "ఇప్పటికే ఖాతా ఉందా? లాగిన్",
-        "legal_disclaimer": "ఖాతాను సృష్టించడం ద్వారా, మీరు మా నిబంధనలను అంగీకరిస్తున్నారు. చట్టవిరుద్ధమైన కార్యకలాపాలు చట్టపరమైన చర్యలకు దారితీయవచ్చు.",
-        "role_label": "మీ పాత్రను ఎంచుకోండి",
-        "role_seller": "విక్రేత",
-        "role_buyer": "కొనుగోలుదారు"
+        "legal_disclaimer": "ఖాతాను సృష్టించడం ద్వారా, మీరు మా నిబంధనలను అంగీకరిస్తున్నారు. చట్టవిరుద్ధమైన కార్యకలాపాలు చట్టపరమైన చర్యలకు దారితీయవచ్చు."
     },
     "dashboard_layout": {
         "menu_dashboard": "డాష్‌బోర్డ్",
-        "menu_add_product": "ఉత్పత్తిని జోడించండి",
+        "menu_add_product": "షోకేస్‌ను సృష్టించండి",
         "menu_analytics": "విశ్లేషణలు",
         "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_community": "కమ్యూనిటీ హబ్",
@@ -93,7 +81,6 @@
         "menu_academy": "కళాకారుల అకాడమీ",
         "menu_live_studio": "లైవ్ స్టూడియో",
         "menu_requests": "ఫాలో అభ్యర్థనలు",
-        "menu_cart": "షాపింగ్ కార్ట్",
         "account_menu_label": "నా ఖాతా",
         "account_menu_verify": "ఖాతాను ధృవీకరించండి",
         "account_menu_profile": "ప్రొఫైల్",
