--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "AI کے ساتھ اپنے فن کو بااختیار بنائیں",
-        "subtitle": "آرٹیسن آپ کو اپنی منفرد تخلیقات کو بیان کرنے، بیان کرنے اور بیچنے میں مدد کرنے کے لیے ذہین اوزار فراہم کرتا ہے۔ اپنے فن پر توجہ مرکوز کریں، ہم الفاظ کو سنبھال لیں گے۔ کاریگروں کے لیے پلیٹ فارم مکمل طور پر مفت ہے۔",
+        "subtitle": "آرٹیسن آپ کو اپنی منفرد تخلیقات کو بیان کرنے، بیان کرنے اور بیچنے میں مدد کرنے کے لیے ذہین اوزار فراہم کرتا ہے۔ اپنے فن پر توجہ مرکوز کریں، ہم الفاظ کو سنبھال لیں گے۔ کاریگروں کے لیے پلیٹ فارم مکمل طور पर مفت ہے۔",
         "artisans_button": "اپنا سفر شروع کریں",
         "login": "لاگ ان کریں",
         "signup": "سائن اپ کریں",
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "جب کوئی گاہک آپ کا فن خریدتا ہے، تو وہ UPI کے ذریعے آسانی سے ادائیگی کر سکتا ہے۔ آپ کو ادائیگی فوری طور پر مل جاتی ہے۔ سادہ، تیز اور منصفانہ۔",
         "payments_feature_2_title": "براہ راست اور شفاف",
         "payments_feature_2_desc": "کوئی پوشیدہ چارجز نہیں۔ کوئی تاخیر نہیں۔ آپ کی محنت کی کمائی براہ راست آپ تک پہنچتی ہے، جو آپ کو اپنے کاروبار کو بڑھانے کے لیے بااختیار بناتی ہے۔",
-        "overview_buyer_title": "خریداروں کے لیے: منفرد ہندوستانی فن دریافت کریں",
-        "overview_buyer_subtitle": "مستند دستکاری کے ایک کیوریٹڈ بازار کو دریافت کریں اور براہ راست فنکاروں سے جڑیں۔",
-        "overview_buyer_1_title": "مستند دستکاری دریافت کریں",
-        "overview_buyer_1_desc": "پورے ہندوستان کے باصلاحیت فنکاروں سے ہزاروں منفرد، ہاتھ سے بنے ہوئے آئٹمز کو براؤز کریں۔",
-        "overview_buyer_2_title": "فنکاروں سے جڑیں",
-        "overview_buyer_2_desc": "فن کے پیچھے کی کہانیاں جانیں اور براہ راست تخلیق کاروں سے بات چیت کریں۔",
-        "overview_buyer_3_title": "محفوظ اور آسان خریداری",
-        "overview_buyer_3_desc": "متعدد ادائیگی کے اختیارات کے ساتھ ایک ہموار اور محفوظ خریداری کے تجربے سے لطف اٹھائیں۔",
         "footer": "© {year} آرٹیسن۔ جملہ حقوق محفوظ ہیں."
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "پاس ورڈ",
         "forgot_password": "اپنا پاس ورڈ بھول گئے؟",
-        "login_seller_button": "بیچنے والے کے طور پر لاگ ان کریں",
-        "login_buyer_button": "خریدار کے طور پر لاگ ان کریں",
+        "login_seller_button": "کاریگر کے طور پر لاگ ان کریں",
         "signup_link": "اکاؤنٹ نہیں ہے؟ سائن اپ کریں"
     },
     "signup_page": {
-        "title": "ایک اکاؤنٹ بنائیں",
-        "description": "منفرد دستکاری بیچنے یا خریدنے کے لیے آرٹیسن میں شامل ہوں۔",
+        "title": "ایک کاریگر اکاؤنٹ بنائیں",
+        "description": "اپنے تخلیقی سفر کو شروع کرنے کے لیے آرٹیسن میں شامل ہوں۔",
         "avatar_label": "ایک پروفائل تصویر اپ لوڈ کریں",
         "username_label": "صارف نام",
         "username_placeholder": "مثلاً PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "پاس ورڈ کی تصدیق کریں",
         "create_account_button": "اکاؤنٹ بنائیں",
         "login_link": "پہلے سے ہی ایک اکاؤنٹ ہے؟ لاگ ان کریں۔",
-        "legal_disclaimer": "ایک اکاؤنٹ بنا کر، آپ ہماری شرائط سے اتفاق کرتے ہیں۔ غیر قانونی سرگرمی قانونی کارروائی کا باعث بن سکتی ہے۔",
-        "role_label": "اپنا کردار منتخب کریں",
-        "role_seller": "بیچنے والے",
-        "role_buyer": "خریدار"
+        "legal_disclaimer": "ایک اکاؤنٹ بنا کر، آپ ہماری شرائط سے اتفاق کرتے ہیں۔ غیر قانونی سرگرمی قانونی کارروائی کا باعث بن سکتی ہے۔"
     },
     "dashboard_layout": {
         "menu_dashboard": "ڈیش بورڈ",
-        "menu_add_product": "پروڈکٹ شامل کریں",
+        "menu_add_product": "شو کیس بنائیں",
         "menu_analytics": "تجزیات",
         "menu_marketing": "مارکیٹنگ ہب",
         "menu_community": "کمیونٹی ہب",
@@ -93,7 +81,6 @@
         "menu_academy": "کاریگر اکیڈمی",
         "menu_live_studio": "لائیو اسٹوڈیو",
         "menu_requests": "فالو کی درخواستیں",
-        "menu_cart": "شاپنگ کارٹ",
         "account_menu_label": "میرا اکاونٹ",
         "account_menu_verify": "اکاؤنٹ کی تصدیق کریں",
         "account_menu_profile": "پروفائل",
@@ -160,7 +147,7 @@
         "video_preview_title": "لائیو اسٹوڈیو",
         "video_preview_description": "لائیو اسٹریم کے لیے آپ کا کیمرہ فیڈ۔ آپ یہاں جو کچھ دیکھتے ہیں وہی آپ کے سامعین دیکھیں گے۔",
         "camera_access_denied": "کیمرہ تک رسائی سے انکار کر دیا گیا",
-        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے کے لیے براہ کرم अपने براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
+        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے کے لیے براہ کرم اپنے براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
         "camera_access_required": "کیمرہ تک رسائی درکار ہے",
         "allow_camera_access_prompt": "لائیو اسٹوڈیو استعمال کرنے کے لیے براہ کرم اپنے براؤزر میں کیمرہ تک رسائی کی اجازت دیں۔",
         "stream_controls_title": "اسٹریم کنٹرولز",
@@ -190,51 +177,8 @@
         "ai_assistant_title": "AI اسسٹنٹ",
         "ai_assistant_desc": "آپ کی استفسار کا جواب یہاں ہے۔",
         "thinking": "سوچ رہا ہے...",
-        "no_query_title": "کوئی استفسار فراہم نہیں کیا گیا",
-        "no_query_desc": "جمع کرانے سے پہلے براہ کرم اپنا سوال درج کریں۔",
-        "answer_ready_title": "جواب تیار ہے!",
-        "answer_ready_desc": "AI نے آپ کی استفسار کا جواب دیا ہے۔",
-        "request_failed_title": "درخواست ناکام ہوگئی",
-        "faq": {
-            "title": "اکثر پوچھے گئے سوالات",
-            "description": "عام سوالات کے فوری جوابات تلاش کریں۔",
-            "items": [
-                {
-                    "question": "کیا آرٹیسن پلیٹ فارم استعمال کرنے کے لیے مفت ہے؟",
-                    "answer": "ہاں، پلیٹ فارم کاریگروں کے لیے مکمل طور پر مفت ہے۔ ہم آپ کی فروخت پر کوئی کمیشن یا فیس وصول نہیں کرتے ہیں۔"
-                },
-                {
-                    "question": "مجھے اپنی فروخت کے لیے ادائیگی کیسے ملے گی؟",
-                    "answer": "آپ اپنے ڈیش بورڈ کے 'ادائیگی کی ترتیبات' سیکشن میں अपनी ادائیگی کی ترجیحات ترتیب دے سکتے ہیں۔ ہم UPI اور براہ راست بینک ٹرانسفر کے ذریعے ادائیگیوں کی حمایت کرتے ہیں۔"
-                },
-                {
-                    "question": "AI ٹولز کیسے کام کرتے ہیں؟",
-                    "answer": "ہمارے AI ٹولز سادہ ہونے کے لیے बनाए گئے ہیں۔ مثال کے طور پر، ایک تفصیل پیدا کرنے کے لیے، صرف ایک پروڈکٹ کی تصویر اپ لوڈ کریں اور 'پیدا کریں' پر کلک کریں۔ AI تصویر کا تجزیہ کرتا ہے اور آپ کے لیے ایک تفصیل اور ٹیگز بناتا ہے۔ اس کے بعد آپ اپنی مرضی کے مطابق متن میں ترمیم کر سکتے ہیں۔"
-                },
-                {
-                    "question": "کیا میں دوسرے فنکاروں کے ساتھ بات چیت کر سکتا ہوں؟",
-                    "answer": "ہاں! 'کمیونٹی ہب' آپ کے لیے پلیٹ فارم پر دوسرے کاریگروں سے جڑنے، خیالات کا اشتراک کرنے اور تعاون کرنے کی جگہ ہے۔"
-                },
-                {
-                    "question": "لائیو جانے کے لیے مجھے اپنا اکاؤنٹ کیوں تصدیق کرنا ہوگا؟",
-                    "answer": "فنکاروں اور سیکھنے والوں سمیت تمام صارفین کے لیے ایک محفوظ اور قابل اعتماد ماحول کو یقینی بنانے کے لیے ہمیں لائیو اسٹریمنگ کے لیے تصدیق کی ضرورت ہے۔ یہ غلط استعمال کو روکنے اور پلیٹ فارم کی سالمیت کو برقرار रखने में مدد کرتا ہے۔"
-                }
-            ]
-        }
-    },
-    "suggestions_page": {
-        "title": "تجاویز کا خانہ",
-        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں हमारी मदद کے لیے اپنے خیالات کا اشتراک کریں۔",
-        "card_title": "اپنی رائے جمع کروائیں",
-        "card_description": "ہم آپ کے ان پٹ کی قدر करते ہیں۔ آپ کے ذہن میں کیا ہے؟",
-        "placeholder": "مثال کے طور پر، 'کاش فنکاروں کے پورٹ فولیو بنانے کا کوئی طریقہ ہوتا...'",
-        "button": "AI کے ساتھ فیڈ بیک کا تجزیہ کریں",
-        "analyzing": "تجزیہ کیا جا रहा ہے...",
-        "analysis_title": "AI فیڈ بیک تجزیہ",
-        "analysis_description": "ہمارا AI اس فیڈ بیک کے बारे में کیا سوچتا ہے وہ यह ہے۔",
-        "summary_title": "خلاصہ",
         "no_feedback_title": "کوئی فیڈ بیک فراہم نہیں کیا گیا",
-        "no_feedback_description": "براہ کرم جمع کرانے से पहले اپنی تجویز درج کریں۔",
+        "no_feedback_description": "براہ کرم جمع کرانے से پہلے اپنی تجویز درج کریں۔",
         "success_title": "فیڈ بیک کا تجزیہ کیا गया!",
         "success_description": "AI نے تجویز پر کارروائی کی ہے۔",
         "error_title": "تجزیہ ناکام",
@@ -243,7 +187,7 @@
     "cart_page": {
         "title": "آپ کی شاپنگ کارٹ",
         "empty_title": "آپ کی کارٹ خالی ہے",
-        "empty_description": "ایسا لگتا ہے کہ آپ نے ابھی تک कोई آئٹم شامل نہیں کیا ہے۔ اپنی پسند کی کوئی چیز تلاش کرنے के لیے دریافت کرنا شروع کریں!",
+        "empty_description": "ایسا لگتا ہے کہ آپ نے ابھی تک کوئی آئٹم شامل نہیں کیا ہے۔ اپنی پسند کی کوئی چیز تلاش کرنے کے لیے دریافت کرنا شروع کریں!",
         "summary_title": "آرڈر کا خلاصہ",
         "summary_description": "چیک آؤٹ کرنے سے پہلے اپنے آرڈر کا جائزہ لیں۔",
         "subtotal": "ذیلی کل",
