--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -16,7 +16,7 @@
         "feature_3_desc": "Get insights on how customers are interacting with your products.",
         "feature_4_title": "Marketing Hub",
         "feature_4_desc": "Generate promotional materials and understand market demand for your art.",
-        "art_title": "For Sellers: A Platform to Grow",
+        "art_title": "A Platform to Grow",
         "art_subtitle": "Everything you need to manage your art business and reach a wider audience.",
         "overview_seller_1_title": "Manage Your Creations",
         "overview_seller_1_desc": "Easily upload, categorize, and manage all your artwork from a single, intuitive dashboard.",
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "When a customer buys your art, they can pay easily with UPI. You get the payment instantly. Simple, fast, and fair.",
         "payments_feature_2_title": "Direct & Transparent",
         "payments_feature_2_desc": "No hidden charges. No delays. Your hard-earned money reaches you directly, empowering you to grow your business.",
-        "overview_buyer_title": "For Buyers: Discover Unique Indian Art",
-        "overview_buyer_subtitle": "Explore a curated marketplace of authentic crafts and connect directly with the artists.",
-        "overview_buyer_1_title": "Discover Authentic Crafts",
-        "overview_buyer_1_desc": "Browse thousands of unique, handcrafted items from talented artists across India.",
-        "overview_buyer_2_title": "Connect with Artists",
-        "overview_buyer_2_desc": "Learn the stories behind the art and communicate directly with the creators.",
-        "overview_buyer_3_title": "Secure & Easy Shopping",
-        "overview_buyer_3_desc": "Enjoy a seamless and secure shopping experience with multiple payment options.",
         "footer": "© {year} Artisan. All rights reserved."
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "Password",
         "forgot_password": "Forgot your password?",
-        "login_seller_button": "Login as Seller",
-        "login_buyer_button": "Login as Buyer",
+        "login_seller_button": "Login as Artisan",
         "signup_link": "Don't have an account? Sign up"
     },
     "signup_page": {
-        "title": "Create an Account",
-        "description": "Join Artisan to start selling or buying unique crafts.",
+        "title": "Create an Artisan Account",
+        "description": "Join Artisan to start your creative journey.",
         "avatar_label": "Upload a Profile Picture",
         "username_label": "Username",
         "username_placeholder": "e.g., PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "Confirm Password",
         "create_account_button": "Create Account",
         "login_link": "Already have an account? Login",
-        "legal_disclaimer": "By creating an account, you agree to our terms. Illegal activity may lead to legal action.",
-        "role_label": "Choose your role",
-        "role_seller": "Seller",
-        "role_buyer": "Buyer"
+        "legal_disclaimer": "By creating an account, you agree to our terms. Illegal activity may lead to legal action."
     },
     "dashboard_layout": {
         "menu_dashboard": "Dashboard",
-        "menu_add_product": "Add Product",
+        "menu_add_product": "Create Showcase",
         "menu_analytics": "Analytics",
         "menu_marketing": "Marketing Hub",
         "menu_community": "Community Hub",
@@ -93,7 +81,6 @@
         "menu_academy": "Artisan Academy",
         "menu_live_studio": "Live Studio",
         "menu_requests": "Follow Requests",
-        "menu_cart": "Shopping Cart",
         "account_menu_label": "My Account",
         "account_menu_verify": "Verify Account",
         "account_menu_profile": "Profile",
