--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "जेव्हा एखादा ग्राहक तुमची कला विकत घेतो, तेव्हा ते UPI ने सहज पेमेंट करू शकतात. तुम्हाला त्वरित पेमेंट मिळते. सोपे, जलद आणि न्याय्य.",
         "payments_feature_2_title": "थेट आणि पारदर्शक",
         "payments_feature_2_desc": "कोणतेही छुपे शुल्क नाही. कोणताही विलंब नाही. तुमचा कष्टाचा पैसा थेट तुमच्यापर्यंत पोहोचतो, जो तुम्हाला तुमचा व्यवसाय वाढवण्यासाठी सक्षम करतो.",
-        "overview_buyer_title": "खरेदीदारांसाठी: अद्वितीय भारतीय कला शोधा",
-        "overview_buyer_subtitle": "अस्सल हस्तकलांच्या क्युरेट केलेल्या बाजाराचे अन्वेषण करा आणि थेट कलाकारांशी कनेक्ट व्हा.",
-        "overview_buyer_1_title": "अस्सल हस्तकला शोधा",
-        "overview_buyer_1_desc": "संपूर्ण भारतातील प्रतिभावान कलाकारांकडून हजारो अद्वितीय, हस्तनिर्मित वस्तू ब्राउझ करा.",
-        "overview_buyer_2_title": "कलाकारांशी कनेक्ट व्हा",
-        "overview_buyer_2_desc": "कलेमागील कथा जाणून घ्या आणि थेट निर्मात्यांशी संवाद साधा.",
-        "overview_buyer_3_title": "सुरक्षित आणि सुलभ खरेदी",
-        "overview_buyer_3_desc": "एकाधिक पेमेंट पर्यायांसह अखंड आणि सुरक्षित खरेदी अनुभवाचा आनंद घ्या.",
         "footer": "© {year} आर्टिसन. सर्व हक्क राखीव."
     },
     "login_page": {
@@ -48,13 +40,12 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "पासवर्ड",
         "forgot_password": "तुमचा पासवर्ड विसरलात?",
-        "login_seller_button": "विक्रेता म्हणून लॉगिन करा",
-        "login_buyer_button": "खरेदीदार म्हणून लॉगिन करा",
+        "login_seller_button": "कलाकार म्हणून लॉगिन करा",
         "signup_link": "खाते नाही? साइन अप करा"
     },
     "signup_page": {
-        "title": "एक खाते तयार करा",
-        "description": "अद्वितीय हस्तकला विकणे किंवा खरेदी करणे सुरू करण्यासाठी आर्टिसनमध्ये सामील व्हा.",
+        "title": "एक कलाकार खाते तयार करा",
+        "description": "तुमचा सर्जनशील प्रवास सुरू करण्यासाठी आर्टिसनमध्ये सामील व्हा.",
         "avatar_label": "एक प्रोफाइल चित्र अपलोड करा",
         "username_label": "वापरकर्तानाव",
         "username_placeholder": "उदा. PriyaKumar",
@@ -78,14 +69,11 @@
         "confirm_password_label": "पासवर्डची पुष्टी करा",
         "create_account_button": "खाते तयार करा",
         "login_link": "आधीपासूनच खाते आहे? लॉगिन करा",
-        "legal_disclaimer": "खाते तयार करून, तुम्ही आमच्या अटींना सहमती देता. बेकायदेशीर কার্যকলাপामुळे कायदेशीर कारवाई होऊ शकते.",
-        "role_label": "तुमची भूमिका निवडा",
-        "role_seller": "विक्रेता",
-        "role_buyer": "खरेदीदार"
+        "legal_disclaimer": "खाते तयार करून, तुम्ही आमच्या अटींना सहमती देता. बेकायदेशीर কার্যকলাপामुळे कायदेशीर कारवाई होऊ शकते."
     },
     "dashboard_layout": {
         "menu_dashboard": "डॅशबोर्ड",
-        "menu_add_product": "उत्पादन जोडा",
+        "menu_add_product": "शोकेस तयार करा",
         "menu_analytics": "विश्लेषण",
         "menu_marketing": "विपणन केंद्र",
         "menu_community": "कम्युनिटी हब",
@@ -93,7 +81,6 @@
         "menu_academy": "कलाकार अकादमी",
         "menu_live_studio": "लाइव्ह स्टुडिओ",
         "menu_requests": "फॉलो विनंत्या",
-        "menu_cart": "शॉपिंग कार्ट",
         "account_menu_label": "माझे खाते",
         "account_menu_verify": "खाते सत्यापित करा",
         "account_menu_profile": "प्रोफाइल",
@@ -225,7 +212,7 @@
     "cart_page": {
         "title": "तुमची शॉपिंग कार्ट",
         "empty_title": "तुमची कार्ट रिकामी आहे",
-        "empty_description": "तुम्ही अद्याप कोणतेही आयटम जोडलेले नाहीत असे दिसते. तुम्हाला आवडेल असे काहीतरी शोधण्यासाठी एक्सप्लोर करणे सुरू करा!",
+        "empty_description": "तुम्ही अद्याप कोणतेही आयटম जोडलेले नाहीत असे दिसते. तुम्हाला आवडेल असे काहीतरी शोधण्यासाठी एक्सप्लोर करणे सुरू करा!",
         "summary_title": "ऑर्डर सारांश",
         "summary_description": "चेक आउट करण्यापूर्वी तुमच्या ऑर्डरचे पुनरावलोकन करा.",
         "subtotal": "उप-एकूण",
